Fixed spacing styles for sidebar menu blocks (/store, /about*, etc).

--- a/web/modules/custom/breema/css/global.css
+++ b/web/modules/custom/breema/css/global.css
@@ -35,3 +35,22 @@
 .block-footer-text-block .contact a.telephone {
   margin: 0 1em 0 0;
 }
+
+.region-sidebar-first ul.menu {
+  margin: 0;
+  padding: 0 0 0 0.25em;
+}
+
+.region-sidebar-first ul ul.menu {
+  margin: 0;
+  padding: 0.25em 0 0 0.5em;
+}
+
+.region-sidebar-first .menu-item {
+  margin: 0;
+  padding: 0.25em 0 0.5em 0.25em;
+}
+
+.sidebar .block .content {
+  margin-top: 0;
+}
